# sarvam-ai-cookbook

./: .flake8  .gitignore  CONTRIBUTING.MD  Makefile  README.md  check_setup.py  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
docker/: Dockerfile.python
examples/AI_Presentation_Architect/: app.py
examples/Birthday_Song_Generator/backend/: main.py
examples/Indic Soundbox AI/: app.py
examples/Indic Soundbox AI/modules/: asr.py  lid.py  llm.py  tts.py
examples/Live_Video_Transcription/: app.py  config.py
examples/Multilingual_Chatbot/: chatbot.py
examples/Multilingual_Customer_Feedback_Analyzer/: feedback_analyzer.py
examples/QuickStart_Chatbot/: chatbot.py
examples/Regional_Code_Helper/: README.md  coding_assistant.py  config.py
examples/Regional_Doubt_Solver/: homework_helper.py
examples/Travel_Planner/: app.py  sarvam_utils.py
examples/ai-graph-generator/: README.md  chart.py
examples/govt_scheme_summmarizer/: README.md  govt_scheme_summarizer.py
examples/sarvam-podcast-generator/: .env.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json
examples/sarvam-podcast-generator/app/: layout.tsx
examples/sarvam-podcast-generator/app/api/cleanup-audio/: route.ts
examples/sarvam-podcast-generator/components/: LanguageSelector.tsx  PodcastControls.tsx  PodcastGenerator.tsx
examples/sarvam-podcast-generator/inngest/: podcast-generation.ts
examples/sarvam-podcast-generator/lib/: cleanup-audio-files.ts  inngest.ts  job-store.ts  poll-job-status.ts  upload-audio.ts  uploadthing.ts
examples/sarvam-showcase/: Dockerfile  eslint.config.mjs  next.config.js  package-lock.json  package.json
examples/sarvam-showcase/src/: middleware.ts  proxy.ts
examples/sarvam-showcase/src/app/: globals.css  layout.tsx  page.tsx
examples/sarvam-showcase/src/components/: ErrorBoundary.tsx
examples/sarvam-showcase/src/lib/: accessibility.tsx  i18n.tsx  logger.ts  security-middleware.ts  security.ts  showcase-data.ts
notebooks/chat completion/: Chat_Completion.ipynb
notebooks/doc-intelligence/: Document_Intelligence.ipynb
notebooks/language identification/: Language_Identification.ipynb
notebooks/stt/: STT_API_Tutorial.ipynb
notebooks/stt-translate/: STT_Translate_API_Tutorial.ipynb
notebooks/stt/stt-batch-api/: Sarvam_STT_Batch_API_Demo.ipynb
notebooks/translate/: Translate_API_Tutorial.ipynb
notebooks/transliterate/: Transliterate_API_Tutorial.ipynb
notebooks/tts/: TTS_Tutorial.ipynb
(+13 files in other folders)
