[project]
name = "sarvam-ai-cookbook"
version = "1.0.0"
description = "Enterprise-Grade Sarvam AI Reference Implementations for India-First AI Products"
authors = [
    { name = "Mangesh Raut", email = "mangeshraut@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["sarvam-ai", "cookbook", "ai", "india", "multilingual", "llm", "speech"]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
extend-exclude = "\\\\.ipynb$"
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
markers = [
    "integration: live network tests that call Sarvam APIs",
    "unit: unit tests that don't require network access",
    "slow: tests that take more than a few seconds to run",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]

[tool.coverage.run]
source = ["examples"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/node_modules/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == '__main__':",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "requests.*",
    "streamlit.*",
    "matplotlib.*",
    "pandas.*",
    "numpy.*",
    "plotly.*",
    "seaborn.*",
    "pydub.*",
    "python_pptx.*",
]
ignore_missing_imports = true
